--- a/page2.html
+++ b/page2.html
@@ -72,7 +72,7 @@ body{font-family: Roboto;}blockquote{border-color: #0e0e87;}.display-1{font-fami
                   <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PfnJceFUiLeQpTIqG3YO3BIWriyOJjuvOnCd92dcNkPZPm5DqMRole5dDlEARpZ+K/jD3MpPHHhQxT7PQesafbLMzTGgBiQ1vfSVfTLRCjmk3PfT3BjC0lp5VA0peabL">
                       <div class="mbr-row">
                         <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
-                            <template data-form-alert="" type="amp-mustache">Subscription successful!</template>
+                            <template data-form-alert="" type="amp-mustache">You message received, Thank you!</template>
                         </div>
                         <div submit-error="" class="mbr-col-sm-12 mbr-col-md-12">
                             <template data-form-alert="" type="amp-mustache">Failed! {{error}}</template>
