--- a/page8.html
+++ b/page8.html
@@ -35,9 +35,10 @@ body{font-family: Roboto;}blockquote{border-color: #0e0e87;}.display-1{font-fami
     <div class="container">
         <h1 class="mbr-section-title mbr-fonts-style align-right mbr-bold mbr-white display-1">JOYJUST HOME OF OPPORTUNITIES</h1>
         <h3 class="mbr-section-subtitle mbr-fonts-style align-right mbr-white mbr-light display-2">Get anything you want anytime and in the way you want it</h3>
-        <p class="mbr-fonts-style mbr-text align-right display-7">Are you looking for great opportunies without, all our products here are proven and tested.
+        <p class="mbr-fonts-style mbr-text align-right display-7">Are you looking for great opportunies, all our products here are proven and tested.
         </p>
         <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="page4.html">HOME &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-md btn-primary display-4" href="page1.html">About US &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-md btn-primary display-4" href="page4.html">Our Services &nbsp; &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-md btn-primary display-4" href="page2.html">&nbsp;Contact Us &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></div>
+   <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="http://www.myekiti.com/cscapplication/">EKITI STATE EMPLOYEMENT DETAILS &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
     </div>
 
 </section>
@@ -58,7 +59,7 @@ body{font-family: Roboto;}blockquote{border-color: #0e0e87;}.display-1{font-fami
                 
             </amp-img>
             <div class="mbr-figure-caption">
-                <p class="mbr-text mbr-black align-center mbr-fonts-style display-4"><br><a href="assets/files/Business%20Plan.pdf">How to create business plan in a jiffy</a><br><br>Make $100-$500 daily by copy and paste<br><br><br><br><br><br><br><br></p>
+                <p class="mbr-text mbr-black align-center mbr-fonts-style display-4"><br><a href="assets/files/Business%20Plan.pdf">How to create business plan 0in a jiffy</a><br><br>Make $100-$500 daily by copy and paste<br><br><br><br><br><br><br><br></p>
             </div>
         </div>
     </div>
