--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{font-family: Roboto;}blockquote{border-color: #0e0e87;}.display-1{font-fami
         <p class="mbr-fonts-style mbr-text align-right display-7">Are you looking for great opportunies without, all our products here are proven and tested.
         </p>
         <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="page4.html">HOME &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-md btn-primary display-4" href="page1.html">About US &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-md btn-primary display-4" href="page4.html">Our Services &nbsp; &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-md btn-primary display-4" href="page2.html">&nbsp;Contact Us &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-md btn-primary display-4" href="page3.html">&nbsp;Our Team &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a class="btn btn-md btn-primary display-4" href="http://www.myekiti.com/cscapplication/">EKITI STATE 2019 CIVIL SERVICE EMPLOYMENT DETAILS &nbsp; &nbsp; &nbsp;&nbsp;</a></div>
-    <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="http://www.myekiti.com/cscapplication/">TO APPLY FOR 2019 EKITI STATE EMPLOYEMENT DETAILS, ENTER HERE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
+    <div class="mbr-section-btn align-right"><a class="btn btn-md btn-primary display-4" href="http://www.myekiti.com/cscapplication/">TO APPLY FOR 2019 EKITI STATE EMPLOYEMENT NOW, ENTER HERE &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
     </div>
 
 </section>
